--- a/Table1.html
+++ b/Table1.html
@@ -61,7 +61,7 @@
             <TD>Smith</TD>
             <TD>7493281902</TD>
             <TD>20,000</TD>
-            <TD><img src="Images/Smi,th.jpg" alt="SMITH"/></TD>
+            <TD><img src="Images/Smith.jpg" alt="SMITH"/></TD>
         </TR>
         <TR>
             <TD>04</TD>
