--- a/Table1.html
+++ b/Table1.html
@@ -30,7 +30,7 @@
 </HEAD>
 <BODY>
     <HEADER>
-        <H4 STYLE="font-family: cursive; background-color: darkviolet;padding: 20px;">QUESTION 1(TO CREATE A TABLE WITH DIFFERENT BACKGROUND-COLOR AND ADDING IMAGES)</H4>
+        <H4 STYLE="font-family: cursive; background-color: #5AB9EA;padding: 20px;">QUESTION 1(TO CREATE A TABLE WITH DIFFERENT BACKGROUND-COLOR AND ADDING IMAGES)</H4>
     </HEADER>
     
     <TABLE>
@@ -72,7 +72,7 @@
         </TR>
     </TABLE>
     
-    <FOOTER STYLE="text-align: center; background-color: darkviolet;">
+    <FOOTER STYLE="text-align: center; background-color: #5AB9EA;">
     <H2>MILIT GANDHI</H2>
     <H3>180020107016</H3>
     <H3>CE(SEM 6<SUP>th</SUP>)</H3>
