--- a/Practical_Page.html
+++ b/Practical_Page.html
@@ -65,6 +65,7 @@
     <a href="Table1.html" target="_blank" title="TO CREATE A TABLE WITH DIFFERENT BACKGROUND-COLOR WITH IMAGES">TABLE 1</a><br>
     <a href="Table2.html" target="_blank" title="TO CREATE A TABLE OF DIFFERENT TYPES OF LIST">TABLE 2</a>
         <br>
+         <a href="BULB_using_JS.html" target="_blank" title="BULB LIGHTS USING JAVASCRIPT" >BULB USING JS</a>
     <FOOTER style="position: relative;top: 40%;left: 85%;text-decoration-line: underline">
     <H3>MILIT GANDHI</H3>
     <H3>180020107016</H3>
