--- a/BULB_using_JS.html
+++ b/BULB_using_JS.html
@@ -63,7 +63,7 @@
                     }
                 else if(n==2)
                     {
-                       pic="Images/BULB/RED_BulbImage.jpg"
+                       pic="Images/BULB/Red_BulbImage.jpg.jpg"
                     }
                 else if(n==3)
                     {
@@ -71,7 +71,7 @@
                     }
                 else
                     {
-                        pic="Images/BULB/YELLOW_BulbImage.jpg"
+                        pic="Images/BULB/yellow_bulbImage.jpg"
                     }
                 document.getElementById('myImage').src = pic;
             }
