--- a/BULB_using_JS.html
+++ b/BULB_using_JS.html
@@ -63,7 +63,7 @@
                     }
                 else if(n==2)
                     {
-                       pic="Images/BULB/Red_BulbImage.jpg"
+                       pic="Red_BulbImage.jpg"
                     }
                 else if(n==3)
                     {
